test: test_init

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fpp-react-native-module",
+  "name": "@chze99/fpp-react-native-module",
   "version": "0.1.0",
   "description": "test",
   "main": "lib/commonjs/index",
@@ -38,7 +38,6 @@
   },
   "keywords": [
     "react-native",
-    "ios",
     "android"
   ],
   "repository": "https://github.com/chze99//fpp-react-native-module",
@@ -52,8 +51,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@evilmartians/lefthook": "^1.2.2",
     "@commitlint/config-conventional": "^17.0.2",
+    "@evilmartians/lefthook": "^1.2.2",
     "@react-native-community/eslint-config": "^3.0.2",
     "@release-it/conventional-changelog": "^5.0.0",
     "@types/jest": "^28.1.2",
@@ -68,7 +67,8 @@
     "pod-install": "^0.1.0",
     "prettier": "^2.0.5",
     "react": "18.2.0",
-    "react-native": "0.71.10",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-builder-bob": "^0.20.0",
     "release-it": "^15.0.0",
     "typescript": "^4.5.2"
@@ -77,8 +77,7 @@
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
-    "react": "*",
-    "react-native": "*"
+    "react": "*"
   },
   "engines": {
     "node": ">= 16.0.0"
@@ -156,5 +155,8 @@
         }
       ]
     ]
+  },
+  "dependencies": {
+    "react-native-default-preference": "^1.4.4"
   }
 }
