--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "fpp-react-native-module",
-  "version": "0.1.18",
-  "description": "test",
+  "name": "facepass-react-native-module",
+  "version": "0.1.2",
+  "description": "A package to use FacePass SDK in react native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
   "types": "lib/typescript/index.d.ts",
