--- a/example/package.json
+++ b/example/package.json
@@ -10,7 +10,18 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "0.71.10"
+    "react-native": "0.71.10",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "expo": "~48.0.18",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "facepass-react-native-module": "^0.1.2",
+    "react-native-default-preference": "^1.4.4",
+    "react-native-gesture-handler": "^2.11.0",
+    "react-native-restart": "^0.0.27",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "^3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
