--- a/android/build.gradle
+++ b/android/build.gradle
@@ -83,11 +83,12 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation fileTree(dir: "libs", include: ["*.aar"])
-implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
-implementation ('org.apache.httpcomponents:httpmime:4.5.6'){
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
+  implementation ('org.apache.httpcomponents:httpmime:4.5.6'){
      exclude module: 'httpclient'
      exclude module:'httpcore-4.4.10'
-}
+  }
   implementation 'com.android.volley:volley:1.2.1'
   implementation 'com.android.support:appcompat-v7:25.3.1'
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
