--- a/android/build.gradle
+++ b/android/build.gradle
@@ -94,6 +94,7 @@ dependencies {
   implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   testImplementation 'junit:junit:4.12'
   implementation 'com.google.guava:guava:27.0.1-android'
+  implementation 'com.licheedev:android-serialport:2.1.3'
   debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
