--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facepass-react-native-module",
-  "version": "0.1.10",
+  "version": "0.1.11",
   "description": "A package to use FacePass SDK in react native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -156,6 +156,5 @@
       ]
     ]
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
