--- a/example/android/settings.gradle
+++ b/example/android/settings.gradle
@@ -1,4 +1,5 @@
-rootProject.name = 'FppReactNativeModuleExample'
+rootProject.name = 'example'
+
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
 
@@ -7,4 +8,3 @@ applyNativeModulesSettingsGradle(settings)
 
 include ':app'
 includeBuild(new File(["node", "--print", "require.resolve('react-native-gradle-plugin/package.json')"].execute(null, rootDir).text.trim()).getParentFile())
-
