--- a/example/package.json
+++ b/example/package.json
@@ -1,33 +1,34 @@
 {
-  "name": "FppReactNativeModuleExample",
-  "version": "0.0.1",
-  "private": true,
+  "name": "FacepassReactNativeModuleExample",
+  "version": "1.0.0",
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
-    "start": "react-native start",
-    "pods": "pod-install --quiet"
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.71.10",
-    "@react-navigation/native": "^6.1.6",
-    "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
-    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "facepass-react-native-module": "^0.1.2",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@react-navigation/stack": "^6.3.16",
+    "expo-camera": "~13.2.1",
+    "expo-media-library": "~15.2.3",
+    "expo-splash-screen": "~0.18.2",
+    "facepass-react-native-module": "^0.1.12",
+    "lodash": "^4.17.21",
     "react-native-default-preference": "^1.4.4",
-    "react-native-gesture-handler": "^2.11.0",
+    "react-native-gesture-handler": "^2.12.0",
     "react-native-restart": "^0.0.27",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0"
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.21.0",
+    "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@babel/preset-env": "^7.20.0",
-    "@babel/runtime": "^7.20.0",
-    "metro-react-native-babel-preset": "0.73.9",
-    "babel-plugin-module-resolver": "^4.1.0"
-  }
+    "@babel/core": "^7.20.0"
+  },
+  "private": true
 }
