--- a/example/package.json
+++ b/example/package.json
@@ -8,23 +8,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
-    "react": "18.2.0",
-    "react-native": "0.71.8",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "expo": "~48.0.18",
     "expo-camera": "~13.2.1",
     "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.2",
-    "facepass-react-native-module": "^0.1.12",
+    "expo-status-bar": "~1.4.4",
+    "facepass-react-native-module": "C:\\Users\\Chze\\Desktop\\React-native\\facepass-react-native-module-0.1.14.tgz",
     "lodash": "^4.17.21",
+    "react": "18.2.0",
+    "react-native": "0.71.8",
     "react-native-default-preference": "^1.4.4",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-restart": "^0.0.27",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-toast-message": "^2.1.6"
   },
   "devDependencies": {
