--- a/example/package.json
+++ b/example/package.json
@@ -17,7 +17,7 @@
     "expo-media-library": "~15.2.3",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
-    "facepass-react-native-module": "C:\\Users\\Chze\\Desktop\\React-native\\facepass-react-native-module-0.1.14.tgz",
+    "facepass-react-native-module": "^0.1.15",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.71.8",
