--- a/android/build.gradle
+++ b/android/build.gradle
@@ -95,6 +95,7 @@ dependencies {
   testImplementation 'junit:junit:4.12'
   implementation 'com.google.guava:guava:27.0.1-android'
   implementation 'com.licheedev:android-serialport:2.1.3'
+  implementation 'com.google.mlkit:barcode-scanning:17.0.2'
   debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}")
     debugImplementation("com.facebook.flipper:flipper-network-plugin:${FLIPPER_VERSION}") {
         exclude group:'com.squareup.okhttp3', module:'okhttp'
