--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
   <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
   <uses-permission android:name=" android.permission.SYSTEM_CAMERA
   " />
+  <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE" />
+
   <queries>
     <intent>
       <action android:name="android.intent.action.VIEW"/>
