--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "facepass-react-native-module",
-  "version": "0.1.18",
+  "version": "0.1.26",
   "description": "A package to use FacePass SDK in react native",
   "main": "lib/commonjs/index",
   "module": "lib/module/index",
@@ -13,6 +13,7 @@
     "android",
     "ios",
     "cpp",
+    "CHANGELOG.md",
     "*.podspec",
     "!lib/typescript/example",
     "!ios/build",
