--- a/android/build.gradle
+++ b/android/build.gradle
@@ -82,8 +82,11 @@ dependencies {
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
-  implementation fileTree(dir: "libs", include: ["*.aar"])
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  // implementation fileTree(dir: "libs", include: ["*.aar"])
+  // implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation (name:"libs/FacePassAndroidSDK-year-release",ext:'aar')
+  implementation (name:"libs/q-zhenglib",ext:'aar')
+  implementation (name:"libs/yface",ext:'jar')
   implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
   implementation ('org.apache.httpcomponents:httpmime:4.5.6'){
      exclude module: 'httpclient'
