--- a/example/android/build.gradle
+++ b/example/android/build.gradle
@@ -41,6 +41,7 @@ allprojects {
         google()
         mavenCentral()
         maven { url 'https://www.jitpack.io' }
+        flatDir { dirs "$rootDir/../node_modules/facepass-react-native-module/android/libs"}
     }
 }
 // @generated begin expo-camera-import - expo prebuild (DO NOT MODIFY) sync-f244f4f3d8bf7229102e8f992b525b8602c74770
