--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,7 +42,7 @@ ext {
 
 android {
 
-compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
+  compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
 
   defaultConfig {
     minSdkVersion getExtOrIntegerDefault("minSdkVersion")
@@ -65,7 +65,7 @@ compileSdkVersion getExtOrIntegerDefault("compileSdkVersion")
     targetCompatibility JavaVersion.VERSION_1_8
   }
 
-  
+
 
 }
 
@@ -84,9 +84,9 @@ dependencies {
   implementation "com.facebook.react:react-native:+"
   // implementation fileTree(dir: "libs", include: ["*.aar"])
   // implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation (name:"libs/FacePassAndroidSDK-year-release",ext:'aar')
-  implementation (name:"libs/q-zhenglib",ext:'aar')
-  implementation (name:"libs/yface",ext:'jar')
+  implementation (name:"FacePassAndroidSDK-year-release",ext:'aar')
+  implementation (name:"q-zhenglib",ext:'aar')
+  implementation (name:"yface",ext:'jar')
   implementation 'org.apache.httpcomponents:httpclient-android:4.3.5.1'
   implementation ('org.apache.httpcomponents:httpmime:4.5.6'){
      exclude module: 'httpclient'
